--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
 ATLAS_URI=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+MYSQL=jllgshllWEUJHGHYJkjsfjds90
+JWT_KEY=secret
