--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react-select": "^5.0.1",
     "axios": "^0.22.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.1.0",
     "react-youtube": "^7.13.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
