--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "body-parser": "^1.19.0",
     "bytes": "^3.1.0",
     "cors": "^2.8.5",
+    "countries-list": "^2.6.1",
+    "country-list-js": "^3.1.7",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "iso-639-3": "^3.0.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-select": "^5.1.0",
