--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "face-api.js": "^0.20.0",
     "font-awesome": "^4.7.0",
+    "iso-639-2": "^3.0.1",
     "iso-639-3": "^3.0.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -31,7 +33,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.1.0",
     "react-youtube": "^7.13.1",
     "semantic-ui-css": "^2.4.1",
