--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-youtube": "^7.13.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "webkit-npm": "^3.1.1"
   },
