--- a/package.json
+++ b/package.json
@@ -22,22 +22,21 @@
     "react-multi-select-component": "^4.2.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
-<<<<<<< Updated upstream
-    "react-select": "^5.1.0",
-    "react-youtube": "^7.13.1",
+
+   
+    
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
-    "webkit-npm": "^3.1.1"
-=======
+    "webkit-npm": "^3.1.1",
+
     "react-select": "^5.2.1",
     "react-youtube": "^7.14.0",
     "save": "^2.4.0",
     "styled-components": "^5.3.3",
     "universal": "^0.1.1",
     "web-vitals": "^2.1.3"
->>>>>>> Stashed changes
   },
   "scripts": {
     "start": "set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
