--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@mui/material": "^5.0.2",
@@ -35,6 +36,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "react-select": "^5.1.0",
+    "react-switch": "^6.0.0",
     "react-youtube": "^7.13.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
