--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-select": "^5.2.1",
     "react-swipeable-views": "^0.14.0",
     "react-switch": "^6.0.0",
+    "react-tabs": "^3.2.3",
     "react-youtube": "^7.14.0",
     "save": "^2.4.0",
     "semantic-ui-css": "^2.4.1",
