--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "multiselect-react-dropdown": "^2.0.17",
-    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
@@ -36,8 +35,6 @@
     "react-tabs": "^3.2.3",
     "react-youtube": "^7.14.0",
     "save": "^2.4.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.1",
     "styled-components": "^5.3.3",
     "universal": "^0.1.1",
     "web-vitals": "^2.1.3",
@@ -60,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
