--- a/src/ConfigServer.json
+++ b/src/ConfigServer.json
@@ -1,5 +1,5 @@
 {
-  "MONGOURL": "mongodb://localhost:27017",
+  "MONGOURL": "mongodb://62.90.89.3:27017",
   "JWT_KEY":"secret",
   "HOST":"http://localhost:5000",
   "Port": 5000
