--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-swipeable-views": "^0.14.0",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
+    "react-widget": "^2.6.4",
+    "react-widgets": "^5.8.3",
     "react-youtube": "^7.14.0",
     "save": "^2.4.0",
     "styled-components": "^5.3.3",
