--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "countries-list": "^2.6.1",
     "crypto-js": "^4.1.1",
     "cryptojs": "^2.5.3",
+    "devextreme": "^21.2.4",
     "iso-639-2": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
@@ -41,7 +42,8 @@
     "styled-components": "^5.3.3",
     "universal": "^0.1.1",
     "web-vitals": "^2.1.3",
-    "webkit-npm": "^3.1.1"
+    "webkit-npm": "^3.1.1",
+    "devextreme-react": "^21.2.4"
   },
   "scripts": {
     "start": "set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
@@ -62,6 +64,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "devextreme-themebuilder": "^21.2.4"
   }
 }
