--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "crypto-js": "^4.1.1",
     "cryptojs": "^2.5.3",
     "devextreme": "^21.2.4",
+    "devextreme-react": "^21.2.4",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "iso-639-2": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
@@ -29,12 +32,14 @@
     "react-duration-picker": "^1.1.1",
     "react-elastic-carousel": "^0.11.5",
     "react-multi-select-component": "^4.2.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
     "react-swipeable-views": "^0.14.0",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
+    "react-textarea-autosize": "^8.3.3",
     "react-widget": "^2.6.4",
     "react-widgets": "^5.8.3",
     "react-youtube": "^7.14.0",
@@ -42,8 +47,7 @@
     "styled-components": "^5.3.3",
     "universal": "^0.1.1",
     "web-vitals": "^2.1.3",
-    "webkit-npm": "^3.1.1",
-    "devextreme-react": "^21.2.4"
+    "webkit-npm": "^3.1.1"
   },
   "scripts": {
     "start": "set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
@@ -64,7 +68,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "devextreme-themebuilder": "^21.2.4"
+    "devextreme-themebuilder": "^21.2.4",
+    "nodemon": "^2.0.15"
   }
 }
