--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
     "react-textarea-autosize": "^8.3.3",
+    "react-toggle": "^4.1.2",
     "react-widget": "^2.6.4",
     "react-widgets": "^5.8.3",
     "react-youtube": "^7.14.0",
