--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^4.3.0",
     "multiselect-react-dropdown": "^2.0.17",
     "react": "^17.0.2",
+    "react-confirm-alert": "^2.8.0",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-duration-picker": "^1.1.1",
