--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
     "styled-components": "^5.3.5",
     "universal": "^0.1.1",
     "web-vitals": "^2.1.3",
-    "webkit-npm": "^3.1.1"
+    "webkit-npm": "^3.1.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-router": "^4.3.1"
   },
   "scripts": {
     "start": "set port=3000 && set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
