--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-select": "^5.0.1",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^4.3.1",
     "collect.js": "^4.31.3",
     "cors": "^2.8.5",
     "countries-list": "^2.6.1",
@@ -23,17 +24,22 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "iso-639-2": "^3.0.1",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "multiselect-react-dropdown": "^2.0.17",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-charts": "^3.0.0-beta.36",
     "react-confirm-alert": "^2.8.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-duration-picker": "^1.1.1",
     "react-elastic-carousel": "^0.11.5",
     "react-multi-select-component": "^4.2.3",
     "react-responsive-carousel": "^3.2.23",
+    "react-router": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.2",
@@ -49,11 +55,7 @@
     "styled-components": "^5.3.5",
     "universal": "^0.1.1",
     "web-vitals": "^2.1.3",
-    "webkit-npm": "^3.1.1",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-router": "^4.3.1"
+    "webkit-npm": "^3.1.1"
   },
   "scripts": {
     "start": "set port=3000 && set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
